[project]
name = "python-index"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "ghpypi>=1.3.2",
]

[[tool.uv.index]]
url = "https://paullockaby.github.io/ghpypi/simple/"

[tool.uv.sources]
ghpypi = { url = "https://github.com/paullockaby/ghpypi/releases/download/v1.4.0/ghpypi-1.4.0-py3-none-any.whl" }
